--- a/linker/Base.lproj/Main.storyboard
+++ b/linker/Base.lproj/Main.storyboard
@@ -103,63 +103,11 @@
                         <viewControllerLayoutGuide type="bottom" id="kUl-M1-pIk"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="5lT-IR-GPA">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rJd-ic-Chn">
-                                <rect key="frame" x="0.0" y="545" width="600" height="55"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HkB-jf-Ive">
-                                        <rect key="frame" x="540" y="0.0" width="60" height="55"/>
-                                        <color key="backgroundColor" red="0.82745098039999998" green="0.99215686270000003" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="55" id="7oz-Gn-0at"/>
-                                            <constraint firstAttribute="width" constant="60" id="qqA-6K-01P"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                        <color key="tintColor" red="0.58823529409999997" green="0.90980392160000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="post"/>
-                                        <connections>
-                                            <action selector="postContent" destination="XS1-8y-YBf" eventType="touchUpInside" id="F5c-co-SXs"/>
-                                            <action selector="postContent" destination="waW-0o-b0T" eventType="touchUpInside" id="kXG-9O-NMq"/>
-                                        </connections>
-                                    </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JnH-a5-Yb2">
-                                        <rect key="frame" x="0.0" y="43" width="540" height="2"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="2" id="Mii-mH-q6Y"/>
-                                        </constraints>
-                                    </view>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KsD-2O-Thh">
-                                        <rect key="frame" x="79" y="8" width="453" height="32"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="32" id="UrF-Pk-9vd"/>
-                                        </constraints>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                        <connections>
-                                            <outlet property="delegate" destination="waW-0o-b0T" id="QgF-Et-55f"/>
-                                        </connections>
-                                    </textView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.58823529409999997" green="0.90980392160000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="JnH-a5-Yb2" secondAttribute="bottom" constant="10" id="MFS-Ne-idA"/>
-                                    <constraint firstItem="KsD-2O-Thh" firstAttribute="top" secondItem="rJd-ic-Chn" secondAttribute="top" constant="8" id="MZd-6J-gdC"/>
-                                    <constraint firstAttribute="bottom" secondItem="HkB-jf-Ive" secondAttribute="bottom" id="Nnk-Pk-1sR"/>
-                                    <constraint firstItem="JnH-a5-Yb2" firstAttribute="leading" secondItem="rJd-ic-Chn" secondAttribute="leading" id="PPI-im-QUG"/>
-                                    <constraint firstItem="HkB-jf-Ive" firstAttribute="leading" secondItem="JnH-a5-Yb2" secondAttribute="trailing" id="QuO-CO-Tag"/>
-                                    <constraint firstAttribute="trailing" secondItem="HkB-jf-Ive" secondAttribute="trailing" id="TKI-Gf-ob3"/>
-                                    <constraint firstItem="JnH-a5-Yb2" firstAttribute="top" secondItem="KsD-2O-Thh" secondAttribute="bottom" constant="3" id="l62-20-dHd"/>
-                                    <constraint firstItem="KsD-2O-Thh" firstAttribute="leading" secondItem="rJd-ic-Chn" secondAttribute="leading" constant="79" id="qrL-OE-Ai9"/>
-                                    <constraint firstItem="HkB-jf-Ive" firstAttribute="top" secondItem="rJd-ic-Chn" secondAttribute="top" id="vdT-hb-GrX"/>
-                                    <constraint firstItem="HkB-jf-Ive" firstAttribute="leading" secondItem="KsD-2O-Thh" secondAttribute="trailing" constant="8" id="x0j-ZU-dxd"/>
-                                </constraints>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dEe-z4-RH4">
-                                <rect key="frame" x="0.0" y="64" width="600" height="481"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dEe-z4-RH4">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" red="0.35294117650000001" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="separatorColor" red="0.69411764710000001" green="0.69411764710000001" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -256,29 +204,81 @@
                                     <outlet property="delegate" destination="waW-0o-b0T" id="vB8-Kg-fxx"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rJd-ic-Chn">
+                                <rect key="frame" x="0.0" y="479" width="600" height="57"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HkB-jf-Ive">
+                                        <rect key="frame" x="540" y="0.0" width="60" height="57"/>
+                                        <color key="backgroundColor" red="0.82745098039999998" green="0.99215686270000003" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="57" id="7oz-Gn-0at"/>
+                                            <constraint firstAttribute="width" constant="60" id="qqA-6K-01P"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <color key="tintColor" red="0.58823529409999997" green="0.90980392160000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="post"/>
+                                        <connections>
+                                            <action selector="postContent" destination="XS1-8y-YBf" eventType="touchUpInside" id="F5c-co-SXs"/>
+                                            <action selector="postContent" destination="waW-0o-b0T" eventType="touchUpInside" id="kXG-9O-NMq"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JnH-a5-Yb2">
+                                        <rect key="frame" x="0.0" y="45" width="540" height="2"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="Mii-mH-q6Y"/>
+                                        </constraints>
+                                    </view>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KsD-2O-Thh">
+                                        <rect key="frame" x="55" y="8" width="477" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="34" id="UrF-Pk-9vd"/>
+                                        </constraints>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="waW-0o-b0T" id="QgF-Et-55f"/>
+                                        </connections>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.58823529409999997" green="0.90980392160000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="JnH-a5-Yb2" secondAttribute="bottom" constant="10" id="MFS-Ne-idA"/>
+                                    <constraint firstItem="KsD-2O-Thh" firstAttribute="top" secondItem="rJd-ic-Chn" secondAttribute="top" constant="8" id="MZd-6J-gdC"/>
+                                    <constraint firstAttribute="bottom" secondItem="HkB-jf-Ive" secondAttribute="bottom" id="Nnk-Pk-1sR"/>
+                                    <constraint firstItem="JnH-a5-Yb2" firstAttribute="leading" secondItem="rJd-ic-Chn" secondAttribute="leading" id="PPI-im-QUG"/>
+                                    <constraint firstItem="HkB-jf-Ive" firstAttribute="leading" secondItem="JnH-a5-Yb2" secondAttribute="trailing" id="QuO-CO-Tag"/>
+                                    <constraint firstAttribute="trailing" secondItem="HkB-jf-Ive" secondAttribute="trailing" id="TKI-Gf-ob3"/>
+                                    <constraint firstItem="JnH-a5-Yb2" firstAttribute="top" secondItem="KsD-2O-Thh" secondAttribute="bottom" constant="3" id="l62-20-dHd"/>
+                                    <constraint firstItem="KsD-2O-Thh" firstAttribute="leading" secondItem="rJd-ic-Chn" secondAttribute="leading" constant="55" id="qrL-OE-Ai9"/>
+                                    <constraint firstItem="HkB-jf-Ive" firstAttribute="leading" secondItem="KsD-2O-Thh" secondAttribute="trailing" constant="8" id="x0j-ZU-dxd"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="rJd-ic-Chn" firstAttribute="top" secondItem="dEe-z4-RH4" secondAttribute="bottom" id="3Y4-2W-yfz"/>
-                            <constraint firstAttribute="trailing" secondItem="rJd-ic-Chn" secondAttribute="trailing" id="8x1-Ov-qux"/>
-                            <constraint firstItem="dEe-z4-RH4" firstAttribute="leading" secondItem="5lT-IR-GPA" secondAttribute="leading" id="Ahc-xt-pgK"/>
-                            <constraint firstAttribute="trailing" secondItem="dEe-z4-RH4" secondAttribute="trailing" id="DZR-W3-fYh"/>
-                            <constraint firstItem="dEe-z4-RH4" firstAttribute="leading" secondItem="5lT-IR-GPA" secondAttribute="leading" id="Dqw-3d-WEo"/>
-                            <constraint firstItem="rJd-ic-Chn" firstAttribute="leading" secondItem="5lT-IR-GPA" secondAttribute="leading" id="Ur7-Yo-pcw"/>
-                            <constraint firstItem="rJd-ic-Chn" firstAttribute="top" secondItem="dEe-z4-RH4" secondAttribute="bottom" id="pfB-f3-eu2"/>
-                            <constraint firstItem="dEe-z4-RH4" firstAttribute="top" secondItem="uzW-MI-OTc" secondAttribute="bottom" id="tlP-9h-i4r"/>
-                            <constraint firstItem="kUl-M1-pIk" firstAttribute="top" secondItem="rJd-ic-Chn" secondAttribute="bottom" id="zcR-ag-6dt"/>
+                            <constraint firstItem="kUl-M1-pIk" firstAttribute="top" secondItem="dEe-z4-RH4" secondAttribute="bottom" constant="55" id="2ZC-a9-FPk"/>
+                            <constraint firstAttribute="trailing" secondItem="dEe-z4-RH4" secondAttribute="trailing" id="78E-CZ-nfc"/>
+                            <constraint firstItem="kUl-M1-pIk" firstAttribute="top" secondItem="dEe-z4-RH4" secondAttribute="bottom" id="Cna-Fv-4hY"/>
+                            <constraint firstAttribute="trailing" secondItem="rJd-ic-Chn" secondAttribute="trailing" id="eIP-28-WbZ"/>
+                            <constraint firstItem="rJd-ic-Chn" firstAttribute="leading" secondItem="5lT-IR-GPA" secondAttribute="leading" id="fVH-s2-HWf"/>
+                            <constraint firstItem="dEe-z4-RH4" firstAttribute="top" secondItem="uzW-MI-OTc" secondAttribute="bottom" id="fxx-A9-F46"/>
+                            <constraint firstItem="dEe-z4-RH4" firstAttribute="leading" secondItem="5lT-IR-GPA" secondAttribute="leading" id="n2C-ol-hFM"/>
+                            <constraint firstItem="kUl-M1-pIk" firstAttribute="top" secondItem="rJd-ic-Chn" secondAttribute="bottom" id="ti0-Cq-J7s"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="3Y4-2W-yfz"/>
+                                <exclude reference="2ZC-a9-FPk"/>
                             </mask>
                         </variation>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="Jbz-wV-tFs"/>
                     <connections>
                         <outlet property="postButton" destination="HkB-jf-Ive" id="28b-gd-y1D"/>
+                        <outlet property="postView" destination="rJd-ic-Chn" id="wnX-bv-e9E"/>
                         <outlet property="tableView" destination="dEe-z4-RH4" id="00I-1e-IXz"/>
                         <outlet property="textView" destination="KsD-2O-Thh" id="9hr-GB-zxp"/>
                         <outlet property="textViewHeight" destination="UrF-Pk-9vd" id="tiO-1b-PBV"/>
